// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`parseGitDiffNumStat parses standard changes 1`] = `
{
  "path/to/file.ts": {
    "deletions": 2,
    "insertions": 1,
  },
}
`;

exports[`parseGitDiffNumStat parses binary files 1`] = `
{
  "path/to/image.png": {
    "deletions": 0,
    "insertions": 0,
  },
}
`;

exports[`parseGitDiffNumStat parses quoted paths 1`] = `
{
  "path/to/file with spaces.ts": {
    "deletions": 1,
    "insertions": 1,
  },
}
`;

exports[`parseGitDiffNumStat handles rename entries gracefully (invalid json-like string) 1`] = `
{
  "\\"old\\" -> \\"new\\"": {
    "deletions": 0,
    "insertions": 0,
  },
}
`;

exports[`parseGitDiffNumStat parses paths containing tabs 1`] = `
{
  "path/part1\\tpath/part2.ts": {
    "deletions": 1,
    "insertions": 1,
  },
}
`;
